Remove inline CSS

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes Project</title>
 </head>
-<body style="background-color:rgb(105, 213, 221)">
-    <font size="36"><h1 style="color:ivory">Odin Recipes</h1></font>
-    <font size="24" color="white"><ul>
+<body>
+    <h1>Odin Recipes</h1>
+    <ul>
     <li><a href="./al-pastor.html" >Al Pastor</a></li>
     <img src="../odin-recipes/images/Tacos-Al-Pastor.jpg" width="200px" height="200px">
     <br>
