--- a/recipes/gin-and-tonic.html
+++ b/recipes/gin-and-tonic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color:lightblue">
+<body>
     <h1>Gin & Tonic</h1>
     <img src="../images/gin-and-tonic.jpg" width="600px" height="450px">
     <h2>Juniper Lime Gin & Tonic</h2>
