--- a/al-pastor.html
+++ b/al-pastor.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color:rgb(236, 227, 141)">
-    <h1 style="color:rgb(210, 126, 30)">Al Pastor</h1>
+<body>
+    <h1>Al Pastor</h1>
     <img src="../odin-recipes/images/Tacos-Al-Pastor.jpg" width="450px" height="450px">
-        <h2 style="color:chocolate">Home-style Tacos al Pastor (Chile and Pineapple Pork Tacos)</h2>
+        <h2>Home-style Tacos al Pastor (Chile and Pineapple Pork Tacos)</h2>
             <p style="width:600px">Tacos al Pastor are a favorite in Mexico and Mexican restaurants around the world for good reason: The mixture of smoky, spicy chiles, sweet pineapples and fresh onions and cilantro all combined creates an incredibly unique and flavorful taco. Traditionally, Tacos al Pastor are made by marinating pork in chile sauce, layering the meat on a verticle rotisserie, adorning with a pinnaple and roasting slowly for hours--a process that's almost impossible to replicate at home. So we've taken the delicious, authentic flavors that make these tacos so special, and modified the recipe for your kitchen at home!</p>
-        <h2 style="color:chocolate">Ingredients</h2>
+        <h2>Ingredients</h2>
             <ul>
                 <li>5 Goya Guajillo Chiles</li>
                 <li>5 Goya Pasilla Chiles or Goya Ancho Chiles</li>
@@ -24,13 +24,13 @@
                 <li>Goya Adobo with Pepper, to taste</li>
                 <li>1 (2 1/2 lb) boneless, skinless pork butt, cut into 1/2 inch cubes</li>
                 <li>2 tablespoons Goya Vegetable Oil</li>
-                <ul><h3 style="color:brown"><strong>For the garnish</strong></h3>
+                <ul><h3><strong>For the garnish</strong></h3>
                     <li>1 (10 ounce) package Goya Corn Tortillas, warmed</li>
                     <li>2 tablespoons finely chopped fresh cilantro</li>
                     <li>1 lime, cut into wedges</li>
                 </ul>
             </ul>
-        <h2 style="color:chocolate">Steps</h2>
+        <h2>Steps</h2>
             <ol style="width:600px">
                 <li>Bring 2 cups water to boil in medium saucepan over medium-high heat. Add guajillo and pasilla chiles. Reduce heat to medium-low and simmer until chiles soften, about 10 minutes; transfer to plate. Remove and discard stem and seeds. Meanwhile, coarsely chop one onion half; reserve remaining half. Strain pineapples; reserve juice and fruit separately.</li>
                 <br>
