--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color:rgb(230, 78, 23)">
+<body>
     <h1>Pad Thai</h1>
     <img src="../images/pad-thai.jpg" height="500px" width="500px">
     <h2>Authentic Pad Thai Recipe</h2>
