Add CSS file making cosmetic changes

--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color:black">
+    
+   <div>
     <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="./al-pastor.html" >Al Pastor</a></li>
+    <button><li><a href="./al-pastor.html" >Al Pastor</a></li></button>
+</head>
+<br>
     <img src="../odin-recipes/images/Tacos-Al-Pastor.jpg" width="200px" height="200px">
     <br>
-    <li><a href="./recipes/gin-and-tonic.html">Gin & Tonic</a></li>
+    <button><li><a href="./recipes/gin-and-tonic.html">Gin & Tonic</a></li></button>
+    <br>
     <img src="../odin-recipes/images/gin-and-tonic.jpg" width="250px" height="200px">
     <br>
-    <li><a href="./recipes/pad-thai.html">Pad Thai</a></li>
+    <button><li><a href="./recipes/pad-thai.html">Pad Thai</a></li></button>
+    <br>
     <img src="../odin-recipes/images/pad-thai.jpg" width="200px" height="200px">
-    </ul></font>
+    </ul>
+    </div>
 </body>
 </html>
