--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div>
     <h1>Pad Thai</h1>
     <img src="../images/pad-thai.jpg" height="500px" width="500px">
     <h2>Authentic Pad Thai Recipe</h2>
-    <p style="width: 500px">Pad Thai is a Thai dish of stir-fried rice noodles with eggs, vegetables and tofu in a sauce of tamarind, fish, dried shrimp, garlic, red chilli pepper and sugar. Some of the ingredients are provided on the side as condiments, including red chilli pepper, lime wedges and peanuts.</p>
+    <p>Pad Thai is a Thai dish of stir-fried rice noodles with eggs, vegetables and tofu in a sauce of tamarind, fish, dried shrimp, garlic, red chilli pepper and sugar. Some of the ingredients are provided on the side as condiments, including red chilli pepper, lime wedges and peanuts.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>12oz dried rice noodles</li>
@@ -32,7 +34,7 @@
         <li>1 lime, cut into wedges</li>
     </ul>
     <h2>Steps</h2>
-    <ol style="width: 500px">
+    <ol>
         <li>Place rice noodles in a large bowl and cover with several inches of room temperature water; let soak for 30 to 60 minutes. Drain.</li>
         <br>
         <li>Whisk sugar, vinegar, fish sauce, and tamarind paste in a saucepan over medium heat. Bring to a simmer, remove from heat.</li>
@@ -43,5 +45,6 @@
         <br>
         <li>Stir in tamarind mixture, 1 1/2 tablespoons sugar, and salt; cook until noodles are tender, 3 to 5 minutes. Stir in peanuts; cook until heated through, 1 to 2 minutes. Garnish with bean sprouts, chives, paprika, and lime wedges.</li>
     </ol>
+    </div>
 </body>
 </html>
