--- a/al-pastor.html
+++ b/al-pastor.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color:black">
+    <div>
     <h1>Al Pastor</h1>
     <img src="../odin-recipes/images/Tacos-Al-Pastor.jpg" width="450px" height="450px">
         <h2>Home-style Tacos al Pastor (Chile and Pineapple Pork Tacos)</h2>
-            <p style="width:600px">Tacos al Pastor are a favorite in Mexico and Mexican restaurants around the world for good reason: The mixture of smoky, spicy chiles, sweet pineapples and fresh onions and cilantro all combined creates an incredibly unique and flavorful taco. Traditionally, Tacos al Pastor are made by marinating pork in chile sauce, layering the meat on a verticle rotisserie, adorning with a pinnaple and roasting slowly for hours--a process that's almost impossible to replicate at home. So we've taken the delicious, authentic flavors that make these tacos so special, and modified the recipe for your kitchen at home!</p>
+            <p>Tacos al Pastor are a favorite in Mexico and Mexican restaurants around the world for good reason: The mixture of smoky, spicy chiles, sweet pineapples and fresh onions and cilantro all combined creates an incredibly unique and flavorful taco. Traditionally, Tacos al Pastor are made by marinating pork in chile sauce, layering the meat on a verticle rotisserie, adorning with a pinnaple and roasting slowly for hours--a process that's almost impossible to replicate at home. So we've taken the delicious, authentic flavors that make these tacos so special, and modified the recipe for your kitchen at home!</p>
         <h2>Ingredients</h2>
             <ul>
                 <li>5 Goya Guajillo Chiles</li>
@@ -31,7 +33,7 @@
                 </ul>
             </ul>
         <h2>Steps</h2>
-            <ol style="width:600px">
+            <ol>
                 <li>Bring 2 cups water to boil in medium saucepan over medium-high heat. Add guajillo and pasilla chiles. Reduce heat to medium-low and simmer until chiles soften, about 10 minutes; transfer to plate. Remove and discard stem and seeds. Meanwhile, coarsely chop one onion half; reserve remaining half. Strain pineapples; reserve juice and fruit separately.</li>
                 <br>
                 <li>Transfer guajillo, pasilla and chipotle chiles, chopped onion half, reserved pineapple juice, vinegar, garlic and cumin to bowl of food processor. Puree until smooth, about 2 minutes. Transfer chile mixture to saucepan over medium-high heat. Bring chile mixture to a boil; cook until paste loses raw onion taste, about 2 minutes. Season with Adobo; cool. In large container with lid, or in large ziptop bag, combine pork cubes, cooled chile marinade and reserved pineapple chunks; transfer to refrigerator. Marinate at least 2 hours, or up to 24 hours.</li>
@@ -40,5 +42,6 @@
                 <br>
                 <li>Meanwhile, finely slice remaining onion half. Transfer sliced onion to bowl with cilantro. Serve pork and pineapple mixture in warm tortillas. Garnish pork tacos with cilantro, onions and limes.</li>
             </ol>
+            </div>
 </body>
 </html>
