--- a/recipes/gin-and-tonic.html
+++ b/recipes/gin-and-tonic.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body style="background-color:black">
+    <div>
     <h1>Gin & Tonic</h1>
     <img src="../images/gin-and-tonic.jpg" width="600px" height="450px">
     <h2>Juniper Lime Gin & Tonic</h2>
-    <p style="width: 600px">The best gin and tonic balances the bitterness of tonic water against the aromatics of the gin. A London dry gin (such as Beefeater), Plymouth or Bombay work well. London dry gins will be more straightforward in flavor while Plymouth gin will be a bit more aromatic. We’ve also used Bombay Sapphire and loved it, but we really enjoy Sapphire’s extra spiciness.</p>
+    <p>The best gin and tonic balances the bitterness of tonic water against the aromatics of the gin. A London dry gin (such as Beefeater), Plymouth or Bombay work well. London dry gins will be more straightforward in flavor while Plymouth gin will be a bit more aromatic. We’ve also used Bombay Sapphire and loved it, but we really enjoy Sapphire’s extra spiciness.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>Large ice cubes</li>
@@ -20,10 +22,11 @@
         <li>1 twist lime peel</li>
     </ul>
     <h2>Steps</h2>
-    <ol style="width: 600px">
+    <ol>
         <li>Stir ice cubes in a glass and drain any water that accumulates. Add gin and juniper berries.</li>
         <br>
         <li>Twist lime peel to release lime essence into the glass. Add tonic water and stir. Garnish with the lime peel.</li>
     </ol>
+    </div>
 </body>
 </html>
